# MLOps_IMDb

./: .dockerignore  .gitignore  .gitlint  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  cloudbuild.yaml  dataset_card.md  docker-compose.yml  download_spam_dataset.py  dvc.yaml  example.env  params.yaml  pyproject.toml  spam_training.py  test.py  testautodeploy.test
.dvc/: config
.github/workflows/: ci.yml  deploy.yml  policy.yml
data/: README.md  raw.dvc  split_info.json
data/imdb/: test.csv.dvc  train.csv.dvc
data/processed/: .gitignore  spam_test_features.pt  spam_train_features.pt
data/raw/: imdb_test.csv.dvc  imdb_train.csv.dvc  spam_test.parquet.dvc  spam_train.parquet.dvc
deployment/: Dockerfile  alerting-provisioning.yaml  dashboard-api-models.json  dashboard-provisioning.yaml  docker-compose.yml  grafana-dashboard-sentiment.json  grafana-dashboard-spam.json  model-updates-alerts.yaml  promtail-config.yaml
deployment/sentiment/: Dockerfile
deployment/spam/: Dockerfile
docs/: alibi-detect-monitoring.md  alibi-detect.md  api-testing.md  architecture.md  challenges.md  docker-compose.md  grafana-promtail-loki.md  testing.md
mlops_imdb/: __init__.py  app.py  config.py  dataset.py  debug_mlflow.py  features.py  logger.py  plots.py  tracking.py
mlops_imdb/data/: __init__.py  download_imdb.py  prepare.py
mlops_imdb/features/: build_features.py
mlops_imdb/modeling/: api.py  download_production_model.py  eval.py  mlflow_model.py  predict.py  predict_sentiment.py  save_production_model.py  train.py  update_model_daemon.py
mlops_imdb/monitoring/: __init__.py  drift_detector.py  prediction_monitor.py  utils.py
mlops_imdb/spam/: __init__.py  api.py  download_production_model.py  eval.py  features.py  mlflow_model.py  model.py  predict_text.py  prepare.py  train.py  update_model_daemon.py
mlruns/0/: meta.yaml
models/: README.md  model.pkl
models/sentiment_model_production/sentiment_model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
models/spam_model_production/spam_model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
notebooks/: 1.0-exploration-imdb.ipynb
reports/: .gitkeep  baseline_metrics.json  classification_report.txt  codecarbon_emissions.csv  codecarbon_emissions.csv.bak  codecarbon_emissions.csv_0.bak  codecarbon_emissions.csv_1.bak  codecarbon_emissions.csv_2.bak  metrics.json
reports/figures/: .gitignore
reports/latex/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
scripts/: download_spam_data.py  test_apis_with_data.ps1
src/features/: build_features.py
src/modeling/: eval.py
tests/codecarbon/: test_trackers.py
tests/data/: test_download_imdb.py  test_prepare.py
tests/features/: test_build_features.py
tests/modeling/: test_api.py  test_eval.py  test_train.py
tests/monitoring/: __init__.py  test_drift_detector.py  test_prediction_monitor.py
tests/spam/: test_api.py  test_eval.py  test_features.py  test_model.py  test_prepare.py  test_train.py
