[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_imdb"
version = "0.0.1"
description = "Film review sentiment analysis."
authors = [
  { name = "mlops_imdb_team" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "codecarbon>=3.0.5",
    "datasets",
    "dvc",
    "dvc-s3>=3.2.2",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mlflow>=3.4.0",
    "nltk>=3.9.2",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "protobuf<5",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn",
    "torch>=2.9.1",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["mlops_imdb"]
include = ["pyproject.toml", "mlops_imdb/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_imdb"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.7.0",  # or latest stable
]
