[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_imdb"
version = "0.0.1"
description = "Film review sentiment analysis."
authors = [
  { name = "mlops_imdb_team" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "fastapi>=0.115.6",
    "loguru",
    "mlflow-skinny>=3.4.0",
    "numpy",
    "pandas",
    "protobuf<5",
    "pydantic>=2.12.0",
    "python-dotenv",
    "pyyaml",
    "requests",
    "scikit-learn",
    "streamlit>=1.52.1",
    "torch==2.3.1",
    "uvicorn>=0.32.1",
    "codecarbon>=3.0.5",
]
requires-python = "~=3.12.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit>=4.3.0",
    "ruff>=0.7.0",
]

train = [
    "datasets",
    "dvc",
    "dvc-s3>=3.2.2",
    "ipython",
    "jupyterlab",
    "matplotlib",
    "nltk>=3.9.2",
    "notebook",
    "seaborn",
    "tqdm",
    "typer",
]


[tool.ruff]
line-length = 99
src = ["mlops_imdb"]
include = ["pyproject.toml", "mlops_imdb/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_imdb"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest",
    "ruff>=0.7.0",  # or latest stable
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
